--- a/index.html
+++ b/index.html
@@ -17,16 +17,7 @@
   <body>
     <section class="list">
       <header class="header">Shopping List</header>
-      <ul class="items">
-        <li class="item__row">
-          <div class="item">
-            <span class="item__name">Egg</span>
-            <button class="item__delete">
-              <i class="fas fa-trash-alt"></i>
-            </button>
-          </div>
-        </li>
-      </ul>
+      <ul class="items"></ul>
       <footer class="footer">
         <input type="text" class="footer__input" id="input" />
         <button class="footer__button">
